WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32878
Wrong state and TouchLists in TouchEvents
https://bugs.webkit.org/show_bug.cgi?id=32878
Summary
Wrong state and TouchLists in TouchEvents
Kim Grönholm
Reported
2009-12-22 12:44:06 PST
Currently we fire touchstart event once and after that all touchpoint presses and releases are fired as touchmove events until all fingers are released and touchend is sent. This is wrong. It should go like this: With event type touchstart the changedTouches list should contain only the touch point that was inserted on the screen. When another touch point is inserted, there is another touchstart event fired with the new touch point again in changedTouches. Similarly with touchend, only the released touch points are in the changedTouches and a touchend event is fired every time one or more fingers are released. This also means that in touchmove event there's never new or released touchpoints.
Attachments
Corrects the TouchEvent API, layouttest for it and DumpRenderTree for Qt
(17.38 KB, patch)
2009-12-22 12:53 PST
,
Kim Grönholm
eric
: review-
Details
Formatted Diff
Diff
Patch with more detailed changelogs.
(18.81 KB, patch)
2010-01-07 04:46 PST
,
Petri Latvala
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kim Grönholm
Comment 1
2009-12-22 12:53:08 PST
Created
attachment 45398
[details]
Corrects the TouchEvent API, layouttest for it and DumpRenderTree for Qt Submitted a patch that fixes this issue. Also removed an unused member variable from EventHandler (m_previousTouchEvent).
WebKit Review Bot
Comment 2
2009-12-22 12:55:49 PST
style-queue ran check-webkit-style on
attachment 45398
[details]
without any errors.
Antti Koivisto
Comment 3
2010-01-04 07:12:13 PST
Does this new behavior match Android, iPhone etc? It would be good to explain the justification for the behavior change also in the ChangeLog.
Eric Seidel (no email)
Comment 4
2010-01-05 13:49:10 PST
Comment on
attachment 45398
[details]
Corrects the TouchEvent API, layouttest for it and DumpRenderTree for Qt We need a more detailed ChangeLog in order to review this. Please see:
http://webkit.org/coding/contributing.html#changelogs
Petri Latvala
Comment 5
2010-01-07 04:46:17 PST
Created
attachment 46045
[details]
Patch with more detailed changelogs. Enhanced the changelog. Indeed this new behaviour matches what is on iPhone and Android.
WebKit Review Bot
Comment 6
2010-01-07 04:51:21 PST
style-queue ran check-webkit-style on
attachment 46045
[details]
without any errors.
Antti Koivisto
Comment 7
2010-01-07 06:10:24 PST
Comment on
attachment 46045
[details]
Patch with more detailed changelogs. Ok. Looks good, r=me.
WebKit Commit Bot
Comment 8
2010-01-07 06:37:34 PST
Comment on
attachment 46045
[details]
Patch with more detailed changelogs. Clearing flags on attachment: 46045 Committed
r52922
: <
http://trac.webkit.org/changeset/52922
>
WebKit Commit Bot
Comment 9
2010-01-07 06:37:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug