2010-01-07  Kim Grönholm  <kim.gronholm@nomovok.com>

Reviewed by Antti Koivisto.

        Wrong state and TouchLists in TouchEvents
        https://bugs.webkit.org/show_bug.cgi?id=32878

        Touch event tests changed to match the API and semantics of iPhone and
        Android. Each new touch point press dispatches a touchstart event with
        the pressed touch point(s) in the changedTouches list, and a release
        dispatches a touchend event with the released touch point(s) in
        changedTouches. Moved points dispatch a touchmove event, with the moved
        points in changedTouches. Old behaviour emitted only one touchstart when
        the first point was pressed and one touchend when the last point was
        released, and any events in between were touchmoves. New presses or
        releases could only be detected by comparing the lists touches and
        changedTouches.

        * fast/events/basic-touch-events-expected.txt:
        * fast/events/script-tests/basic-touch-events.js:
        (singleTouchSequence):
        (multiTouchSequence):
2010-01-07  Kim Grönholm  <kim.gronholm@nomovok.com>

        Reviewed by Antti Koivisto.

        Wrong state and TouchLists in TouchEvents
        https://bugs.webkit.org/show_bug.cgi?id=32878

        Touch events changed to match the API and semantics of iPhone and
        Android. Each new touch point press dispatches a touchstart event with
        the pressed touch point(s) in the changedTouches list, and a release
        dispatches a touchend event with the released touch point(s) in
        changedTouches. Moved points dispatch a touchmove event, with the moved
        points in changedTouches. Old behaviour emitted only one touchstart when
        the first point was pressed and one touchend when the last point was
        released, and any events in between were touchmoves. New presses or
        releases could only be detected by comparing the lists touches and
        changedTouches.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleTouchEvent):
        * page/EventHandler.h:
2010-01-07  Kim Grönholm  <kim.gronholm@nomovok.com>

        Reviewed by Antti Koivisto.

        Wrong state and TouchLists in TouchEvents
        https://bugs.webkit.org/show_bug.cgi?id=32878

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::touchStart):
        (EventSender::touchEnd):
        (EventSender::clearTouchPoints):
        * DumpRenderTree/qt/EventSenderQt.h:

Canonical link: https://commits.webkit.org/44334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52922 268f45cc-cd09-0410-ab3c-d52691b4dbfc