WebCore/page/EventHandler.cpp
@@ -2545,17 +2545,20 @@ bool EventHandler::handleTouchEvent(const PlatformTouchEvent& event)
         return false;
 
     RefPtr<TouchList> touches = TouchList::create();
-    RefPtr<TouchList> changedTouches = TouchList::create();
+    RefPtr<TouchList> pressedTouches = TouchList::create();
+    RefPtr<TouchList> releasedTouches = TouchList::create();
+    RefPtr<TouchList> movedTouches = TouchList::create();
     RefPtr<TouchList> targetTouches = TouchList::create();
 
     const Vector<PlatformTouchPoint>& points = event.touchPoints();
+    AtomicString* eventName = 0;
+
     for (int i = 0; i < points.size(); ++i) {
         const PlatformTouchPoint& point = points[i];
-
         IntPoint framePoint = documentPointForWindowPoint(m_frame, point.pos());
         HitTestResult result = hitTestResultAtPoint(framePoint, /*allowShadowContent*/ false);
-
         Node* target = result.innerNode();
+
         // Touch events should not go to text nodes
         if (target && target->isTextNode())
             target = target->parentNode();
@@ -2570,49 +2573,77 @@ bool EventHandler::handleTouchEvent(const PlatformTouchEvent& event)
             m_firstTouchPagePos = framePoint;
         }
 
-        if (point.state() != PlatformTouchPoint::TouchReleased) {
-            touches->append(touch);
-
-            if (m_touchEventTarget == target)
-               targetTouches->append(touch);
+        if (point.state() == PlatformTouchPoint::TouchReleased)
+            releasedTouches->append(touch);
+        else {
+            if (point.state() == PlatformTouchPoint::TouchPressed)
+                pressedTouches->append(touch);
+            else {
+                touches->append(touch);
+                if (m_touchEventTarget == target)
+                    targetTouches->append(touch);
+                if (point.state() == PlatformTouchPoint::TouchMoved)
+                    movedTouches->append(touch);
+            }
         }
-
-        if (point.state() != PlatformTouchPoint::TouchStationary)
-            changedTouches->append(touch);
-    }
-
-    AtomicString* eventName = 0;
-    switch (event.type()) {
-    case TouchStart:
-        eventName = &eventNames().touchstartEvent;
-        break;
-    case TouchMove:
-        eventName = &eventNames().touchmoveEvent;
-        break;
-    case TouchEnd:
-        eventName = &eventNames().touchendEvent;
-        break;
     }
 
     if (!m_touchEventTarget)
         return false;
 
-    RefPtr<TouchEvent> ev = TouchEvent::create(touches.get(), targetTouches.get(), changedTouches.get(),
-                                               *eventName, m_touchEventTarget->document()->defaultView(),
-                                               m_firstTouchScreenPos.x(), m_firstTouchScreenPos.y(),
-                                               m_firstTouchPagePos.x(), m_firstTouchPagePos.y(),
-                                               event.ctrlKey(), event.altKey(), event.shiftKey(),
-                                               event.metaKey());
+    bool defaultPrevented = false;
 
-    ExceptionCode ec = 0;
-    m_touchEventTarget->dispatchEvent(ev.get(), ec);
+    if (releasedTouches->length() > 0) {
+        eventName = &eventNames().touchendEvent;
+        RefPtr<TouchEvent> endEv = 
+            TouchEvent::create(touches.get(), targetTouches.get(), releasedTouches.get(),
+                                                   *eventName, m_touchEventTarget->document()->defaultView(),
+                                                   m_firstTouchScreenPos.x(), m_firstTouchScreenPos.y(),
+                                                   m_firstTouchPagePos.x(), m_firstTouchPagePos.y(),
+                                                   event.ctrlKey(), event.altKey(), event.shiftKey(),
+                                                   event.metaKey());
+        ExceptionCode ec = 0;
+        m_touchEventTarget->dispatchEvent(endEv.get(), ec);
+        defaultPrevented = endEv->defaultPrevented();
+    }
+    if (pressedTouches->length() > 0) {
+        // Add pressed touchpoints to touches and targetTouches
+        for (int i = 0; i < pressedTouches->length(); ++i) {
+            touches->append(pressedTouches->item(i));
+            if (m_touchEventTarget == pressedTouches->item(i)->target())
+                targetTouches->append(pressedTouches->item(i));
+        }
+
+        eventName = &eventNames().touchstartEvent;
+        RefPtr<TouchEvent> startEv = 
+            TouchEvent::create(touches.get(), targetTouches.get(), pressedTouches.get(),
+                                                   *eventName, m_touchEventTarget->document()->defaultView(),
+                                                   m_firstTouchScreenPos.x(), m_firstTouchScreenPos.y(),
+                                                   m_firstTouchPagePos.x(), m_firstTouchPagePos.y(),
+                                                   event.ctrlKey(), event.altKey(), event.shiftKey(),
+                                                   event.metaKey());
+        ExceptionCode ec = 0;
+        m_touchEventTarget->dispatchEvent(startEv.get(), ec);
+        defaultPrevented |= startEv->defaultPrevented();
+    }
+    if (movedTouches->length() > 0) {
+        eventName = &eventNames().touchmoveEvent;
+        RefPtr<TouchEvent> moveEv = 
+            TouchEvent::create(touches.get(), targetTouches.get(), movedTouches.get(),
+                                                   *eventName, m_touchEventTarget->document()->defaultView(),
+                                                   m_firstTouchScreenPos.x(), m_firstTouchScreenPos.y(),
+                                                   m_firstTouchPagePos.x(), m_firstTouchPagePos.y(),
+                                                   event.ctrlKey(), event.altKey(), event.shiftKey(),
+                                                   event.metaKey());
+        ExceptionCode ec = 0;
+        m_touchEventTarget->dispatchEvent(moveEv.get(), ec);
+        defaultPrevented |= moveEv->defaultPrevented();
+    }
 
     if (event.type() == TouchEnd)
         m_touchEventTarget = 0;
 
-    m_previousTouchEvent = ev;
-
-    return ev->defaultPrevented();
+    return defaultPrevented;
 }
 #endif
 
